--- a/activities/04-dodging-covid-19/template-p5-project/index.html
+++ b/activities/04-dodging-covid-19/template-p5-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
 
-    <title>Doding COVID-19</title>
+    <title>Coding COVID-19</title>
 
     <!-- CSS stylesheet(s) -->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
